fix:   Range pages based on activity, no in sessions
